--- a/pom.xml
+++ b/pom.xml
@@ -115,9 +115,20 @@
 			<artifactId>spring-oxm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-
-
 		<!-- WEB end -->
+
+		<!-- Mybatis start -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>3.4.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<!-- Mybatis end -->
 
 		<!-- google java lib -->
 		<dependency>
